--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <div class="flex-container">
     <header></header>
     <main>
+      <div class="item stuff"></div>
+      <div class="item setWidth">2</div>
+      <div class="item setWidth"></div>
+      <div class="item setWidth">4</div>
+      <div class="item setWidth"></div>
+      <div class="item stuff">6</div>
 
     </main>
     <footer></footer>
